# chrome-troubleshooter

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
chrome_troubleshooter/: __init__.py  cli.py  config.py  diagnostics.py
src/chrome_troubleshooter/: __init__.py  async_launcher.py  cli.py  cli.py.backup  cli_audit.py  cli_complex.py  cli_simple.py  cli_typer.py  config.py  constants.py  constants_audit.py  diagnostics.py  diagnostics_audit.py  launcher.py  launcher_audit.py  logger.py  logger_audit.py  utils.py  utils_audit.py
tests/: test_async_launcher.py  test_cli_audit.py  test_cli_simple.py  test_config.py  test_enhanced_features.py  test_functional_launch.py  test_logger.py
